--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 resources/js/components/RegistroHoras2Component.vue
+resources/js/components/RegistroHorasComponent.vue
