Mensajes de registro, modificación y eliminar programados. Arrancando con SRD (problemas con proyectos)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "@fortawesome/vue-fontawesome": "^0.1.7",
         "@livelybone/vue-datepicker": "^3.1.0",
         "@mdi/font": "^4.5.95",
+        "@progress/kendo-data-query": "^1.5.2",
+        "@progress/kendo-theme-default": "^4.6.0",
+        "@progress/kendo-vue-grid": "^0.3.7",
         "bootstrap-vue": "^2.0.0-rc.28",
         "moment": "^2.24.0",
         "vue-js-popover": "^1.1.8",
